# Prism

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  README.md  docker-compose.yml  pyproject.toml  railway.cron.toml  railway.normaliser.toml  railway.pipeline.toml  railway.toml  requirements.txt
docker/: Dockerfile  start-api.sh
frontend/: .env.example  DESIGN_SYSTEM.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  anim.jsx  api.js  index.css
frontend/src/components/: AlertsSection.jsx  AnomalyLine.jsx  Brief.jsx  ChatLauncher.jsx  (+19 more)
prism/: mcp_server.py
prism/ai/: chat.py  circuit_breaker.py  claude_client.py  earnings.py  memos.py  openai_client.py  scorer.py  scoring.py  synthesis.py
prism/analysis/: __init__.py  backtest.py  composite.py  paper.py
prism/api/: correlation.py  main.py  security.py
prism/common/: companies.py  config.py  db.py  migrate.py  redis_client.py  schemas.py
prism/flows/: dag.py  pipeline.py
prism/normaliser/: anomaly.py  dedup.py  sentiment.py  summaries.py  timestamps.py  weighting.py  worker.py
prism/notify/: digest.py  email.py  monitor.py  subscriptions.py  updates.py
prism/scrapers/: app_reviews.py  base.py  google_trends.py  hiring.py  sec_edgar.py  sentiment.py
scripts/: backup_db.sh  diag_signals.py  seed_remote.sh
sql/: init.sql
tests/: test_api_security.py  test_backtest.py  test_chat.py  test_composite.py  test_correlation.py  test_email_digest.py  test_paper.py  test_phase2.py  test_phase2_ai.py  test_pipeline.py  test_scoring_resilience.py  test_weighting.py
(+15 files in other folders)
