[project]
name = "prism"
version = "0.1.0"
description = "Alternative data ingestion platform for fintech intelligence (Phase 1)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "redis>=5.0,<6",
    "psycopg2-binary>=2.9,<3",
    "httpx>=0.27,<0.29",
    "python-dateutil>=2.9,<3",
    "prefect>=3.0,<4",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "anthropic>=0.40,<1",
    "openai>=1.40,<2",
    "praw>=7.7,<8",
    "pytrends>=4.9,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
prism-normaliser = "prism.normaliser.worker:main"
prism-sentiment = "prism.scrapers.sentiment:main"
prism-hiring = "prism.scrapers.hiring:main"
prism-trends = "prism.scrapers.google_trends:main"
prism-reviews = "prism.scrapers.app_reviews:main"
prism-edgar = "prism.scrapers.sec_edgar:main"
prism-flows = "prism.flows.dag:main"
prism-api = "prism.api.main:serve"
prism-brief = "prism.ai.synthesis:main"
prism-scorer = "prism.ai.scorer:main"
prism-migrate = "prism.common.migrate:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["prism*"]

[tool.ruff]
line-length = 90
target-version = "py311"
